# unstructured-eval-metrics

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
configs/: all_metrics_config.json
simple-data/cct-gt/: mini-holistic-1-v2-005-CISA-AA22-076-Strengthening-Cybersecurity-p1-p4-p002.pdf__uns-plaintext-v1.0.0__0x0001__0.txt  mini-holistic-1-v2-NVIDIA-p006.pdf__uns-plaintext-v1.0.0__0x0001__0.txt
simple-data/od-first-prediction/: mini-holistic-1-v2-005-CISA-AA22-076-Strengthening-Cybersecurity-p1-p4-p002.pdf.json  mini-holistic-1-v2-NVIDIA-p006.pdf.json
simple-data/table-gt/: mini-holistic-1-v2-NVIDIA-p006.pdf__uns-table-json-v1.0.0__0x0002__0.json
src/common/: __init__.py  metric_config.py  metric_registry.py  metric_types.py
src/evaluation/: config_model.py  generate_agg_eval_metrics.py  generate_doc_eval_metrics.py
src/persist/: parquet.py  schema.py  utils.py
src/processing/: aggregate.py  structure_processing.py  table_processing.py  text_processing.py
src/scoring/: aggregate_scoring.py  cct_adjustment.py  content_scoring.py  element_consistency_scoring.py  structure_scoring.py  table_scoring.py
src/utils/: tokenizer.py
