[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eval-metrics-core"
version = "0.0.1"
description = "Core metrics for evaluation of LLM performance"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }

dependencies = [
    "rapidfuzz",
    "pydantic>=2.12.0",
    "requests",
    "pandas",
    "tiktoken",
    "numpy",
    "beautifulsoup4",
    "glob2",
    "pydantic-settings",
    "pyarrow",
    "boto3",
    "apted>=1.0.3",
]

classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "pre-commit",
]

[project.urls]
Homepage = "https://github.com/Unstructured-IO/unstructured-eval-metrics"
Source = "https://github.com/Unstructured-IO/unstructured-eval-metrics"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Include package data if needed
# "eval_metrics_core" = ["py.typed"]

[tool.ruff]
line-length = 100
exclude= [
    ".venv",
    "venv",
    ".python_packages",
    "build",
    "migrations",
	"datasets"
]

[tool.ruff.lint]
select = [
    "C4",       # -- flake8-comprehensions --
    "COM",      # -- flake8-commas --
    "E",        # -- pycodestyle errors --
    "F",        # -- pyflakes --
    "I",        # -- isort (imports) --
    "PLR0402",  # -- Name compared with itself like `foo == foo` --
    "PT",       # -- flake8-pytest-style --
    "UP015",    # -- redundant `open()` mode parameter (like "r" is default) --
    "UP018",    # -- Unnecessary {literal_type} call like `str("abc")`. (rewrite as a literal) --
    "UP032",    # -- Use f-string instead of `.format()` call --
    "UP034",    # -- Avoid extraneous parentheses --
]
ignore = [
    "COM812",   # -- over aggressively insists on trailing commas where not desireable --
    "PT005",    # -- flags mock fixtures with names intentionally matching private method name --
    "PT011",    # -- pytest.raises({exc}) too broad, use match param or more specific exception --
    "PT012",    # -- pytest.raises() block should contain a single simple statement --
    "SIM117",   # -- merge `with` statements for context managers that have same scope --
]
